styles.css
.opv-resource-error-input {
    border-color: var(--background-modifier-error) !important;
    border-width: 2px !important;
}

.opv-remote-label {
    position: absolute;
    font-size: 0.8em;
    padding: 2px 4px;
    border-radius: 6px;
    border-bottom-left-radius: 0px;
    translate: 0 0;
    transform: translate(0, -100%);
    transition: transform 0.1s ease-out, border-radius 0.2s ease-out;
    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
    width: max-content;
    white-space: nowrap;
}

.opv-remote-label::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 2em;
    transform: translate(-96.5%, -100%);
}

.opv-remote-label.opv-align-right {
    translate: -100% 0;
    transform: translate(0, -100%);
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 0px;
}

.opv-remote-label:hover {
    translate: 0 0;
    transform: translate(0, 100%);
    border-top-left-radius: 0px;
    border-bottom-left-radius: 6px;
}

.opv-remote-label.opv-align-right:hover {
    translate: -100% 0;
    transform: translate(0, 100%) !important;
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 0px;
}

.opv-remote-label-container {
    padding: 5px;
}

.opv-remote-caret {
    pointer-events: none;;
}

.opv-remote-caret-inline {
    box-sizing: border-box;
}

.cm-widgetBuffer {
    position: relative;
}

